@@ -7,8 +7,8 @@ It also computes genotype counts for association tests.
 }
 \usage{
 assocTestRegression(genoData, outcome, model.type, 
-		    covar.list = NULL, ivar.list = NULL,
-                    gene.action.list = NULL,
+                    covar.list = NULL, ivar.list = NULL,
+                    gene.action.list = NULL, dosage = FALSE,
                     scan.chromosome.filter = NULL, 
                     scan.exclude = NULL, CI = 0.95,
                     robust = FALSE, LRtest = TRUE,
@@ -74,6 +74,9 @@ assocTestRegression(genoData, outcome, model.type,
   }
   will run the first model using "additive" gene action, and will run the second model using both "dominant" and "recessive" gene actions.}
 
+  \item{dosage}{logical for whether or not the genotype values are imputed dosages.  The default value is \code{FALSE} for true genotype calls.
+  When using imputed dosages, the \code{gene.action} must be additive, and genotype counts will not be calculated.}
+  
   \item{scan.chromosome.filter}{a logical matrix that can be used to
   exclude some chromosomes, some scans, or some specific scan-chromosome
   pairs. Entries should be \code{TRUE} if that scan-chromosome pair should be
@@ -141,7 +144,7 @@ e.g. A scan.chromosome.filter matrix used for an analyis when
   For logistic regression models, if the SNP is monomorphic in either cases or controls, then the slope parameter is not well-defined.
   In this situation, an error message will be returned (see \code{model.N.gene_action.warningOrError} in the Value section below for details), 
   and the regression of this SNP will not be performed.  If a test of significance is still desired for these SNPs, 
-  we suggest performing either a Fisher's Exact Test using the \code{\link{assocTestFisherExact}} function provided in GWASTools 
+  we suggest performing either a Fisher's Exact Test using the \code{assocTestFisherExact} function provided in GWASTools 
   or performing a trend test (using \code{model.type = "linear"} in this function).
 
   Individual samples can be included or excluded from the
@@ -159,6 +162,8 @@ e.g. A scan.chromosome.filter matrix used for an analyis when
   using the \code{scan.chromosome.filter} matrix, but still allows easy
   exclusion of a specific group of scans (e.g. males or Caucasians)
   using \code{scan.exclude}.
+  
+  This function allows for the usage of imputed dosages in place of genotypes in the additive model.
 }
 
 \value{
@@ -257,12 +262,12 @@ e.g. A scan.chromosome.filter matrix used for an analyis when
   \item{model.N.gene_action.LR.Stat.GxE}{value of the Likelihood Ratio test statistic for jointly testing all genotype interaction parameters}
   \item{model.N.gene_action.LR.pval.GxE}{Likelihood Ratio test p-value for jointly testing all genotype interaction parameters.}
   
-  For tests that use linear regression:
+  For tests that use linear regression (will be \code{NA} if using imputed dosages for genotypes):
   \item{model.N.nAA}{ 	number of AA genotypes in samples}
   \item{model.N.nAB}{ 	number of AB genotypes in samples}
   \item{model.N.nBB}{ 	number of BB genotypes in samples}
 
-  For tests that use logistic regression:
+  For tests that use logistic regression (will be \code{NA} if using imputed dosages for genotypes):
   \item{model.N.nAA.cc0}{number of AA genotypes in samples with outcome coded as 0}
   \item{model.N.nAB.cc0}{number of AB genotypes in samples with outcome coded as 0}
   \item{model.N.nBB.cc0}{number of BB genotypes in samples with outcome coded as 0}
@@ -288,8 +293,7 @@ where mod.res is the output data-frame from the function.
 
 Warnings:
 
-If \code{outfile} is not \code{NULL}, 
-another file will be saved with the name "outfile.chr.i_k.warnings.RData" that contains any warnings generated by the function.
+Another file will be saved with the name "outfile.chr.i_k.warnings.RData" that contains any warnings generated by the function.
 An example of what would be contained in this file:
 Warning messages:
 1: Model 1 , Y chromosome tests are confounded with sex and should be run separately without sex in the model
@@ -313,25 +317,26 @@ Warning messages:
 # desiged to eliminate duplicated individuals
 # and scans with missing values of sex
 library(GWASdata)
-data(affyScanADF)
-samp.chr.matrix <- matrix(TRUE,nrow(affyScanADF),26)
-dup <- duplicated(affyScanADF$subjectID)
-samp.chr.matrix[dup | is.na(affyScanADF$sex),] <- FALSE
+data(affy_scan_annot)
+scanAnnot <- ScanAnnotationDataFrame(affy_scan_annot)
+samp.chr.matrix <- matrix(TRUE,nrow(scanAnnot),26)
+dup <- duplicated(scanAnnot$subjectID)
+samp.chr.matrix[dup | is.na(scanAnnot$sex),] <- FALSE
 
 # additionally, exclude YRI subjects
-scan.exclude <- affyScanADF$scanID[affyScanADF$race == "YRI"]
+scan.exclude <- scanAnnot$scanID[scanAnnot$race == "YRI"]
 
 # create some variables for the scans
-affyScanADF$sex <- as.factor(affyScanADF$sex)
-affyScanADF$age <- rnorm(nrow(affyScanADF),mean=40, sd=10)
-affyScanADF$case.cntl.status <- rbinom(nrow(affyScanADF),1,0.4)
-affyScanADF$blood.pressure[affyScanADF$case.cntl.status==1] <- rnorm(sum(affyScanADF$case.cntl.status==1),mean=100,sd=10)
-affyScanADF$blood.pressure[affyScanADF$case.cntl.status==0] <- rnorm(sum(affyScanADF$case.cntl.status==0),mean=90,sd=5)
+scanAnnot$sex <- as.factor(scanAnnot$sex)
+scanAnnot$age <- rnorm(nrow(scanAnnot),mean=40, sd=10)
+scanAnnot$case.cntl.status <- rbinom(nrow(scanAnnot),1,0.4)
+scanAnnot$blood.pressure[scanAnnot$case.cntl.status==1] <- rnorm(sum(scanAnnot$case.cntl.status==1),mean=100,sd=10)
+scanAnnot$blood.pressure[scanAnnot$case.cntl.status==0] <- rnorm(sum(scanAnnot$case.cntl.status==0),mean=90,sd=5)
 
 # create data object
 ncfile <- system.file("extdata", "affy_geno.nc", package="GWASdata")
 nc <- NcdfGenotypeReader(ncfile)
-genoData <-  GenotypeData(nc, scanAnnot=affyScanADF)
+genoData <-  GenotypeData(nc, scanAnnot=scanAnnot)
 
 # set regression variables and models
 outcome <- c("case.cntl.status","blood.pressure")
@@ -356,7 +361,7 @@ outfile <- tempfile()
 
 assocTestRegression(genoData,
                     outcome = outcome,
-		    model.type = model.type,
+					model.type = model.type,
                     covar.list = covar.list,
                     ivar.list = ivar.list,
                     gene.action.list = gene.action.list,
@@ -364,7 +369,7 @@ assocTestRegression(genoData,
                     scan.exclude = scan.exclude,
                     CI = 0.95,
                     robust = TRUE,
-		    LRtest = TRUE,
+					LRtest = TRUE,
                     chromosome.set = chr.set,
                     outfile = outfile)
 
